--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "pixi.js": "^8.14.3"
     },
     "devDependencies": {
-        "vite": "^5.4.8"
+        "vite": "^5.4.8",
+        "terser": "^5.44.1"
     }
 }
