--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# Dependencies
+node_modules/
+
+# Build output
+dist/
+*.local
+
 # Logs
 logs
 *.log
@@ -6,16 +13,6 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
-node_modules
-dist
-dist-ssr
-*.local
-
-0
-1
-2
-3
 
 # Editor directories and files
 .vscode/*
@@ -27,3 +24,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# TypeScript
+*.tsbuildinfo
