--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
         "pixi.js": "^8.14.3"
     },
     "devDependencies": {
-        "vite": "^5.4.8",
-        "terser": "^5.44.1"
+        "@types/node": "^25.0.3",
+        "terser": "^5.44.1",
+        "typescript": "^5.9.3",
+        "vite": "^5.4.8"
     }
 }
